# sales-forecasting

./: Dockerfile  LICENSE  README.md  app.py  github_actions.yaml  pyproject.toml  requirements.txt
ah_package/: inference.py  predict.py
ah_package/training/: data_prep.py  model_training.py  utils.py
notebooks/: original_notebook.ipynb
