[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[project]
name = "ah_package"
version = "0.0.1"
dependencies = ["numpy", "pandas", "scikit-learn", "fastapi", "uvicorn", "ruff"]
authors = [
  { name="Pieter El Sharouni", email="pieter.elsharouni@gmail.com" },
]
description = "A small forecasting sales prediction package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]